# inkathon

./: README.md
contracts/: Cargo.toml  build-all.sh  package.json  tsconfig.json
contracts/deployments/delegation/: delegation.contract  delegation.json  delegation.wasm
contracts/deployments/dispute/: dispute.contract  dispute.json  dispute.wasm
contracts/deployments/epoch/: epoch.contract  epoch.json  epoch.wasm
contracts/deployments/greeter/: greeter.contract  greeter.wasm
contracts/deployments/registry/: registry.contract  registry.json  registry.wasm
contracts/deployments/router/: router.contract  router.json  router.wasm
contracts/deployments/subscription/: subscription.contract  subscription.json  subscription.wasm
contracts/deployments/topicmeta/: topicmeta.contract  topicmeta.json  topicmeta.wasm
contracts/scripts/: deployAll.ts  deployRouter.ts  sandbox.ts  subscriberbox.ts
contracts/src/delegation/: Cargo.toml  README.md  lib.rs
contracts/src/dispute/: Cargo.toml  README.md  lib.rs
contracts/src/epoch/: Cargo.toml  README.md  lib.rs
contracts/src/registry/: Cargo.toml  README.md  lib.rs
contracts/src/router/: Cargo.toml  README.md  lib.rs
contracts/src/subscription/: Cargo.toml  README.md  lib.rs
contracts/src/topicmeta/: Cargo.toml  README.md  lib.rs
contracts/traits/epoch_traits/: Cargo.toml  lib.rs
contracts/traits/registry_traits/: Cargo.toml  lib.rs
contracts/traits/subscription_traits/: Cargo.toml  lib.rs
frontend/: tsconfig.json
frontend/src/components/web3/: RegistryActions.tsx
frontend/src/deployments/: deployments.ts
frontend/src/pages/: index.tsx
