[package]
name = "epoch"
version = "0.1.0"
authors = ["mmacedoeu <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
epoch-traits = { path = "../../traits/epoch_traits", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "epoch-traits/std"]
ink-as-dependency = []
